# N3LDGStanceDetector

./: .gitignore  CMakeLists.txt  README.md  cmakecommand.txt
data/: SemEval2016-Task6-subtaskB-testdata-gold.txt  option.debug  semeval2016-task6-train+dev.txt  semeval2016-task6-train+dev_hc.txt  train-debug.txt  weaklysup-dev.txt  weaklysup-test.txt
src/basic/: Example.h  Instance.h  InstanceReader.h  InstanceWriter.h  MySoftMaxLoss.h  Reader.h  Stance.h  Targets.h
src/detector/: NNCNNLabeler.cpp  NNCNNLabeler.h
src/detector/model/: ComputionGraph.h  ConditionalLSTM.h  Driver.h  HyperParams.h  ModelParams.h
