CMAKE_MINIMUM_REQUIRED(VERSION 2.8)
PROJECT(N3LDGStanceDetector)

SET(CMAKE_CXX_COMPILER c++)

add_compile_options(/wd4018 /wd4819 /wd4996)

SET(SRC_DIR src)
SET(CMAKE_CXX_FLAGS_DEBUG "${BASE_FLAGS} -O1 -g")
SET(CMAKE_CXX_FLAGS_RELEASE "${BASE_FLAGS} -O3")
SET(CMAKE_EXE_LINKER_FLAGS["Debug"] "-g")

AUX_SOURCE_DIRECTORY(${SRC_DIR} SRCS)
AUX_SOURCE_DIRECTORY(${SRC_DIR}/basic SRCS)
AUX_SOURCE_DIRECTORY(${SRC_DIR}/detector SRCS)
ADD_EXECUTABLE(detector ${SRCS})
SET(N3LDGSTANCE_DETECTOR_LIB ${LOG4CPLUS_LIB})
TARGET_LINK_LIBRARIES(detector ${N3LDGSTANCE_DETECTOR_LIB})

INCLUDE_DIRECTORIES(eigen N3LDG ${SRC_DIR}/basic ${SRC_DIR}/detector/model ${boost})